# stream_deck_controller

./: .gitignore  CMakeLists.txt  README.md  package.xml
.ci/: Dockerfile  build.sh  run_dev_docker.sh
launch/: stream_deck_controller.launch
src/: open_dashboard_robot.py  open_dashboard_video.py  open_dashboard_wifi.py  open_dxl_input.py  stream_deck_controller.py
src/auxiliar_files/: camera_initiator.py  emergency_stop.py  home_position.py  reset_odometry.py  speech_initiator.py
